--- a/css/style.css
+++ b/css/style.css
@@ -321,7 +321,7 @@ footer{
     max-width: 1024px;
     margin: 0px auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     min-height: 337px;
