Update main styles 06.06.18
Add adaptive and @media

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 /*Global styles*/
+*{
+    margin: 0;
+    padding: 0;
+}
+html {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
 footer{
     font-family: 'Open Sans', sans-serif;
 }
@@ -8,6 +17,7 @@ body {
     padding: 0;
     font-family: 'Fjalla One', sans-serif;
     font-weight: normal;
+    overflow-x: hidden;
 }
 
 li{
@@ -29,36 +39,67 @@ a, a:hover{
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
+    align-items: center;
+    min-height: 79px;
 }
 
 .logo{
     font-family: 'Lobster', cursive;
     font-size: 49px;
     color: #3cc3b5;
-    margin-top: 10px;
     margin-left: 15px;
+}
+
+.logo a {
+    color: #3cc3b5; 
+}
+.search {
+    position: relative;
+}
+
+.search i{
+    position: absolute;
+    right: 11px;
+    top: 27px;
+    cursor: pointer;
+    color: #e1e1e1;
+    font-size: 28px;
 }
 
 .inp-search{
     width: 435px;
     height: 30px;
-    background: url(../img/magnifying-glass.png) no-repeat #fff;   
-    background-position: 98%;  
+    /* background: url(../img/magnifying-glass.png) no-repeat #fff;    */
+    /* background-position: 98%;   */
     padding-left: 20px; 
     font-size: 13px;
     margin-top: 25px;
     margin-bottom: 20px;
     border: 1px solid #e1e1e1;
+    color: #e1e1e1;
 }
 
-.cart-img{
-    margin-top: 20px;
+.cart {
+    display: flex;
 }
+
+.cart i{
+    line-height: 52px;
+    height: 38px;
+    display: block;
+    margin-left: 10px;
+    color: #afafaf;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+
 
 .nav-wrap{
     width: 100%;
     background: #4ccfc1;
-    height: 35px;
+    min-height: 35px;
 }
 
 nav{
@@ -66,7 +107,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    height: 36px;
+    min-height: 36px;
     max-width: 1024px;
     margin: 0px auto;
 }
@@ -133,7 +174,7 @@ nav{
 }
 
 .slide-subhead{
-    width: 410px;
+    max-width: 410px;
     margin-top: 25px;
     line-height: 28px;
     word-wrap: break-word;
@@ -359,40 +400,101 @@ footer{
 }
 /*End Footer*/
 
-/*Media*/
-@media (min-width: 320px) {
-  .inp-search{
-    width: 90px;  
+
+/* Media styles */
+@media (max-width: 1080px){
+    .nav-item a{
+        padding: 0 5px;
     }
+    .nav-item a::after {
+        display: none;
+    }
+}
+@media (max-width: 720px){
+    body {
+        padding: 0 15px;
+    }
+    .inp-search{
+        width: 150px;
+    }
+    
+    .slide-wrap{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .slide-img {
+        margin-top: 15px;
+        margin-left: 0px; 
+        
+}
+    .slide-head{
+        margin-top: 15px;
+        margin: 25px auto;
+        text-align: center;
+    }
+    
+    .slide-subhead{
+        text-align: center;
+    }
+    
+    .slide-text-wrap{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .slide-circle{
+        margin-bottom: 20px;
+    }
+    
+    .wrapper-product{
+        justify-content: center;
+    }
+    
+    .footer-wrap{
+        justify-content: center;
+    }
+    .footer-links ul{
+        margin: 15px;
+    }
+}
+
+@media (max-width: 600px){
+   .inp-search{
+       width: 100px;
+   }
+    
+    .vertic-line{
+        display: none;
+    }
+    
     .product-item{
-        margin-left: 5px;
+        height: 190px;
+        width: 240px;
+    }
+    
+    .product-slide-wrap{
+        margin-left: auto;
+    }
+    .product-item:first-child 
+    .product-slide-wrap{
+        margin-left: auto
+    }
+    
+    .product-item img{
+        margin-left: auto;
     }
 }
 
-@media (min-width: 600px) {
-  .inp-search{
-    width: 250px;  
-    }
-    .wrapper-product{
+@media (max-width: 400px){
+    .wrap-top{
+        flex-wrap: wrap;
         justify-content: center;
     }
-}
-
-@media (min-width: 900px) {
-  .inp-search{
-    width: 435px;  
-    }
-    .wrapper-product{
-        justify-content: space-between;
+    
+    .logo{
+        flex-grow: 2;
     }
 }
-
-@media (max-width: 600px) {
-  .inp-search{
-    width: 250px;  
-    }
-    .wrapper-product{
-        justify-content: center;
-    }
-}
-/*End Media*/
+/*End Media styles*/
