--- a/css/font.css
+++ b/css/font.css
@@ -1,9 +1,10 @@
 @font-face {
-           font-family: 'BebasNeueRegular';
-           src:url('font/BebasNeueRegular.otf') format('otf'),
-               url('font/BebasNeueRegular.ttf') format('ttf'),
-               url('font/BebasNeueRegular.woff') format('woff'),
-               url('font/BebasNeueRegular.woff2') format('woff2');
-           font-weight: normal;
-           font-style: normal;
+    font-family: 'Bebas Neue';
+    src: url('../font/bebasneueregular.eot') format('eot'),
+    url('../font/bebasneueregular.ttf') format('ttf'),
+    url('../font/bebasneueregular.svg') format('svg'),
+    url('../font/bebasneueregular.woff') format('woff'),
+    url('../font/bebasneueregular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
